--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <label for="user" class="lead text-center w-100">Username</label>
 	  <input type="text" class="form-control" id="user" placeholder="Enter your username...">
 	  <label for="pass" class="mt-3 lead text-center w-100">Password</label>
-	  <input type="text" class="form-control mb-3" id="pass" placeholder="Enter your password...">
+	  <input type="password" class="form-control mb-3" id="pass" placeholder="Enter your password...">
 	  <a href="#" class="text-light">Forgot password</a>
 	  <input type="submit" value="Login" class="btn-submit mt-4 float-right w-25">
 	</form>
