--- a/login_page/index.html
+++ b/login_page/index.html
@@ -10,12 +10,12 @@
 </head>
 
 <body>
-	<form class="p-5" method="post">
+	<form class="p-5" method="post" autocomplete="off">
       <h1 class="display-4 text-center">Innovative Solutions</h1>
       <label for="user" class="lead text-center w-100">Username</label>
-	  <input type="text" class="form-control" id="user" placeholder="Enter your username...">
+	  <input type="text" class="form-control" id="user" placeholder="Enter your username..." required>
 	  <label for="pass" class="mt-3 lead text-center w-100">Password</label>
-	  <input type="password" class="form-control mb-3" id="pass" placeholder="Enter your password...">
+	  <input type="password" class="form-control mb-3" id="pass" placeholder="Enter your password..." required>
 	  <a href="#" class="text-light">Forgot password</a>
 	  <input type="submit" value="Login" class="btn-submit mt-4 float-right w-25">
 	</form>
