Fixed css problem

--- a/Node_Module/public/index.html
+++ b/Node_Module/public/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
-    <form class="p-5" method="post" autocomplete="off">
+    <form class="p-5" action="dashboard" method="post" autocomplete="off">
         <h1 class="display-4 text-center">Innovative Solutions</h1>
         <label for="user" class="lead text-center w-100">Username</label>
         <input type="text" name="username" class="form-control" id="user" placeholder="Enter your username..." required>
