title and username with jquery

--- a/Node_Module/public/dashboard.html
+++ b/Node_Module/public/dashboard.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Innovative Solutions &#11044; Logged in as Makise, Kurisu</title>
+  <title class="user">Innovative Solutions &#11044; Logged in as </title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css">
   <link rel="stylesheet" href="./styles/style.css">
@@ -27,7 +27,7 @@
       <li class="p-3 nav-item nav-link">Transaction History</li>
     </ul>
     <div class="navbar-brand">
-      <span class="lead" id="user"></span>
+      <span class="lead user"></span>
       <img src="https://orig00.deviantart.net/6a12/f/2014/195/4/4/kurisu_makise_by_animeprofileavatars-d7qqa8s.jpg" alt="Makise, Kurisu"
         class="profile-img">
     </div>
@@ -100,5 +100,4 @@
     </div>
   </div>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.13.0/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
