--- a/Node_Module/public/dashboard.html
+++ b/Node_Module/public/dashboard.html
@@ -85,16 +85,18 @@
         </div>
       </div>
       <div class="col-6">
-        <div class="d-flex justify-content-center">
-          <button class="btn btn-primary">Create Listing</button>
-        </div>
-        <h4 class="text-center my-3">Earnings for April</h4>
-        <div class="container text-center border border-dark rounded w-50 mb-3">
-          <h5>PHP</h5>
-          <h5>30, 000</h5>
-        </div>
-        <div class="d-flex justify-content-center">
-          <button class="btn btn-primary">See Transaction History</button>
+        <div class="bg-light rounded py-3 text-dark">
+          <div class="d-flex justify-content-center">
+            <button class="btn btn-primary">Create Listing</button>
+          </div>
+          <h4 class="text-center my-3">Earnings for April</h4>
+          <div class="container text-center border border-dark rounded w-50 mb-3">
+            <h5>PHP</h5>
+            <h5>30, 000</h5>
+          </div>
+          <div class="d-flex justify-content-center">
+            <button class="btn btn-primary">See Transaction History</button>
+          </div>
         </div>
       </div>
     </div>
