--- a/Node_Module/public/index.html
+++ b/Node_Module/public/index.html
@@ -14,6 +14,7 @@
 <body>
   <form class="p-5" action="dashboard" method="post" autocomplete="off">
     <h1 class="display-4 text-center">Innovative Solutions</h1>
+    <small class="text-danger"></small>
     <label for="user" class="lead text-center w-100">Username</label>
     <input type="text" name="username" class="form-control" id="user" placeholder="Enter your username..." required>
     <label for="pass" class="mt-3 lead text-center w-100">Password</label>
@@ -24,6 +25,3 @@
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-</body>
-
-</html>
