Added Logout functionality in dashboard.html

--- a/Node_Module/public/dashboard.html
+++ b/Node_Module/public/dashboard.html
@@ -30,6 +30,7 @@
       <span class="lead user"></span>
       <img src="https://orig00.deviantart.net/6a12/f/2014/195/4/4/kurisu_makise_by_animeprofileavatars-d7qqa8s.jpg" alt="Makise, Kurisu"
         class="profile-img">
+        <a href ="/">Logout</a>
     </div>
   </nav>
   <div class="container">
