--- a/PHP Module/signupClient/signupClient.html
+++ b/PHP Module/signupClient/signupClient.html
@@ -12,13 +12,16 @@
     <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection" />
     <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection" />
 </head>
+
 <body>
     <div class="row">
         <div class="col s6 m4 offset-m4">
             <div class="card white darken-1">
                 <div class="card-content blue-text">
-                    <span class="card-title">Sign Up as Client</span>
-                    <hr>
+                    <center>
+                        <span class="card-title">Sign Up as Client</span>
+                        <hr>
+                    </center>
                     <div class="row">
                         <form class="col s12">
                             <div class="row">
@@ -72,6 +75,7 @@
                                 </div>
                                 <div class="col s12 m6 offset-m4">
                                     <button class="btn waves-effect waves-light" type="submit" name="action">Sign me up!</button>
+                                    <p><a href="signup.html">Go back!</a></p>
                                 </div>
                             </div>
                         </form>
