--- a/PHP Module/signupClient/signupClient.html
+++ b/PHP Module/signupClient/signupClient.html
@@ -73,10 +73,10 @@
                                         </div>
                                     </form>
                                 </div>
-                                <div class="col s12 m6 offset-m4">
+                                <center>
                                     <button class="btn waves-effect waves-light" type="submit" name="action">Sign me up!</button>
                                     <p><a href="signup.html">Go back!</a></p>
-                                </div>
+                                </center>
                             </div>
                         </form>
                     </div>
