--- a/PHP Module/signupClient/signupClient.html
+++ b/PHP Module/signupClient/signupClient.html
@@ -75,7 +75,9 @@
                                 </div>
                                 <center>
                                     <button class="btn waves-effect waves-light" type="submit" name="action">Sign me up!</button>
-                                    <p><a href="signup.html">Go back!</a></p>
+                                    <p><br></p>
+                                    <p><a href="signup.html">Sign Up now!</a></p>
+                                    <p><a href="index.html">Already have an account?</a></p>
                                 </center>
                             </div>
                         </form>
