--- a/PHP Module/signupClient/signup.html
+++ b/PHP Module/signupClient/signup.html
@@ -11,47 +11,49 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection" />
     <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection" />
+    <style>
+        h3 {
+            font-family: century gothic;
+        }
+
+        body {
+            background-color: aliceblue;
+        }
+
+    </style>
 </head>
 
 <body>
     <div class="row">
-        <div class="col s10 offset-m1">
-            <div class="card white darken-1">
-                <div class="card-content blue-text">
-                    <center>
-                        <span class="card-title">Would you like to:</span>
-                        <hr>
-                    </center>
-                    <div class="row">
-                        <div class="col s6 m6">
-                            <div class="card">
-                                <div class="card-image">
-                                    <img src="images/client.png">
-                                    <span class="card-title">Sign Up as Client</span>
-                                </div>
-                                <div class="card-content">
-                                    <p>Sign up as Client now to experience services of others!</p>
-                                </div>
-                                <div class="card-action">
-                                    <a href="signupClient.html">Sign Up</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col s6">
-                            <div class="card">
-                                <div class="card-image">
-                                    <img src="images/serProv.jpeg">
-                                    <span class="card-title">Sign Up as Service Provider</span>
-                                </div>
-                                <div class="card-content">
-                                    <p>Sign up as Service Provider now to share your services!</p>
-                                </div>
-                                <div class="card-action">
-                                    <a href="signupSP.html">Sign Up</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+        <center>
+            <h3 class="card-title">Would you like to:</h3>
+            <hr>
+        </center>
+        <div class="col s6 m3 offset-m3">
+            <div class="card blue-grey">
+                <div class="card-image">
+                    <img src="images/client.jpg">
+                </div>
+                <div class="card-content white-text">
+                    <p>Sign up as Client now to experience services of others!</p>
+                </div>
+                <div class="card-action">
+                    <a href="signupClient.html">Sign Up now!</a>
+                    <a href="index.html">Already have an account?</a>
+                </div>
+            </div>
+        </div>
+        <div class="col s6 m3">
+            <div class="card blue-grey">
+                <div class="card-image">
+                    <img src="images/serProv.jpg">
+                </div>
+                <div class="card-content white-text">
+                    <p>Sign up as Service Provider now to share your services!</p>
+                </div>
+                <div class="card-action">
+                    <a href="signupSP.html">Sign Up now!</a>
+                    <a href="index.html">Already have an account?</a>
                 </div>
             </div>
         </div>
